--- a/src/styles/components/_vote.scss
+++ b/src/styles/components/_vote.scss
@@ -22,7 +22,7 @@
     top: 0;
     left: 0;
   }
-  text-align: center;
+  // text-align: center;
   padding: 3rem;
   padding-bottom: 5rem;
 
@@ -35,6 +35,7 @@
 
   &__heading {
     font-size: 2.8rem;
+    text-align: center;
   }
   p {
     font-weight: bold;
